--- a/style.css
+++ b/style.css
@@ -1,3 +1,126 @@
+/* From Uiverse.io by boryanakrasteva */ 
+@-webkit-keyframes honeycomb {
+  0%,
+  20%,
+  80%,
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  30%,
+  70% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes honeycomb {
+  0%,
+  20%,
+  80%,
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  30%,
+  70% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.honeycomb {
+  height: 24px;
+  position: relative;
+  width: 24px;
+}
+
+.honeycomb div {
+  -webkit-animation: honeycomb 2.1s infinite backwards;
+  animation: honeycomb 2.1s infinite backwards;
+  background:#4b298d;
+  height: 12px;
+  margin-top: 6px;
+  position: absolute;
+  width: 24px;
+}
+
+.honeycomb div:after, .honeycomb div:before {
+  content: '';
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.honeycomb div:after {
+  top: -6px;
+  border-bottom: 6px solid #4b298d;
+}
+
+.honeycomb div:before {
+  bottom: -6px;
+  border-top: 6px solid #4b298d;
+}
+
+.honeycomb div:nth-child(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+  left: -28px;
+  top: 0;
+}
+
+.honeycomb div:nth-child(2) {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+  left: -14px;
+  top: 22px;
+}
+
+.honeycomb div:nth-child(3) {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+  left: 14px;
+  top: 22px;
+}
+
+.honeycomb div:nth-child(4) {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+  left: 28px;
+  top: 0;
+}
+
+.honeycomb div:nth-child(5) {
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+  left: 14px;
+  top: -22px;
+}
+
+.honeycomb div:nth-child(6) {
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  left: -14px;
+  top: -22px;
+}
+
+.honeycomb div:nth-child(7) {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+  left: 0;
+  top: 0;
+}
+
+
+
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
@@ -7,8 +130,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color:#D8D2C2;
-    /* background: linear-gradient(135deg, #e6d2e2, #f7f7f7); */
+     background-image: url("./images/Untitled\ design.png"); 
+    background-size: cover;
     color: #000000;
   }
   
@@ -26,6 +149,10 @@ body {
   /* Form Styling */
   #registration-form, #quiz-container {
     padding: 20px;
+    justify-content:center;
+  }
+  #registration-form h1{
+    margin-left: 30%;
   }
   
   h2 {
@@ -41,8 +168,9 @@ body {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
+  
     border-radius: 5px;
-    border: 1px solid #D4BEE4;
+    border: 1px solid #e2b9ff;
     outline: none;
     font-size: 1rem;
   }
@@ -50,18 +178,18 @@ body {
   input[type="text"],
   input[type="email"],
   input[type="password"] {
-    background: #FAF7F0;
+    background: #ddd0f1;
   }
   
   input:focus {
    
-    border-color: #B17457;
-    box-shadow: 0 0 5px #B17457;
+    border-color: #4b298d;
+    box-shadow: 0 0 5px #4b298d;
   }
   
   button {
-    background: #B17457;
-    color: #e9e4da;
+    background: #4b298d;
+    color: #ddd0f1;
     border: none;
     cursor: pointer;
     font-weight: bold;
@@ -69,12 +197,12 @@ body {
   }
   
   button:hover {
-    background: #e1926d;
-    color: #333;
+    background: #331b63;
+    color: #ddd0f1;
   }
   
   button:disabled {
-    background: #ccc;
+    background: #ddd0f1;
     cursor: not-allowed;
   }
   
@@ -85,12 +213,12 @@ body {
     gap: 10px;
   }
   #log{
-    color: #4A4947;
+    color: #4b298d;
     cursor: pointer;
   }
 
   #log:hover{
-    color: #655940;
+    color: #4e1db1;
     text-decoration: underline;
   }
   /* General Styles */
@@ -102,7 +230,7 @@ body {
   }
   
   .login-box {
-    background: #FAF7F0;
+    background: #efe4ff4b;
     border-radius: 10px;
     padding: 30px 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -131,15 +259,15 @@ body {
   .input-group input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #decdf7;
     border-radius: 5px;
     font-size: 16px;
     transition: border-color 0.3s ease;
-    background-color: #FAF7F0
+    background-color: #ddd0f1
   }
   
   .input-group input:focus {
-    border-color: #B17457;
+    border-color: #4b298d;
     outline: none;
   }
   
@@ -147,8 +275,8 @@ body {
   .login-btn {
     width: 100%;
     padding: 10px;
-    background: #B17457;
-    color: #f3e5df;
+    background: #4b298d;
+    color: #ddd0f1;
     font-size: 16px;
     border: none;
     border-radius: 5px;
@@ -157,19 +285,19 @@ body {
   }
   
   .login-btn:hover {
-    background: #e1926d;
-    color: #333;
+    background: #2e1461;
+    color: #ffffff;
   }
   
   /* Footer */
   .footer {
     margin-top: 15px;
     font-size: 14px;
-    color: #555;
+    color: #2e1461;
   }
   
   .footer a {
-    color: #82543f;
+    color: #2e1461;
     text-decoration: none;
   }
   
@@ -181,7 +309,7 @@ body {
     display: flex;
     align-items: center;
     padding: 10px;
-    background: #FAF7F0;
+    background: #ddd0f1;
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s;
@@ -202,13 +330,21 @@ body {
   }
   
   button.prev {
-    background: #7c4040b8;
+    background: #4b298d;
     color: #ffffff;
   }
   
   button.prev:hover {
-    background: #b06262;
-    color: #000000;
+    background: #2e1461;
+    color: #ffffff;
+  }
+  button.next{
+    background: #4b298d;
+    color: #ffffff;
+  }
+   button.next:hover {
+    background: #2e1461;
+    color: #ffffff;
   }
   
   /* Responsive Design */
@@ -240,10 +376,10 @@ body {
   /* Welcome Container */
   #welcome {
     text-align: center;
-    background: #D8D2C2;
+    background: #ddd0f16b;
     padding: 20px 40px;
-    /* border-radius: 12px;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.4); */
+     border-radius: 12px;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.192); 
     width: 90%;
     max-width: 400px;
   }
@@ -266,31 +402,33 @@ body {
   }
   
   .quiz-btn {
-    background-color: #D8D2C2;
-    color: #4A494c;
+    background-color: #d9c5f7;
+    color: #120035;
     border: none;
-    padding: 10px 20px;
+    padding: 7px 17px;
     border-radius: 6px;
     font-size: 1rem;
     cursor: pointer;
     transition: transform 0.3s ease, background-color 0.3s ease;
+    margin-left: 1%;
   }
   
   .quiz-btn:hover {
     transform: scale(1.1);
-    background-color: #B17457;
+    background-color: #4b298d;
     color: #fff;
   }
   
   .quiz-btn.selected {
-    background-color: #82543f;
+    background-color: #2b1457;
     color: #fff;
     font-weight: bold;
   }
   
   /* Start Button */
   #start-quiz {
-    background-color: #4A4947;
+    width: inherit;
+    background-color: #31136b;
     color: #fff;
     border: none;
     padding: 12px 24px;
@@ -301,7 +439,7 @@ body {
   }
   
   #start-quiz:hover {
-    background-color: #000000;
+    background-color: #1e053f;
     transform: scale(1.1);
   }
   .quiz-option label {
@@ -323,7 +461,40 @@ body {
     margin-top: 20%;
 }
 #logout-button{
-    width: calc(50% - 10px);
+    /* width: calc(50% - 10px); */
+    width: inherit;
     margin: 5px;
     border-radius: 5px;
+    color: #120035;
+    background-color: rgba(255, 255, 255, 0);
+    border-style: solid;
+    border-width: 1px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+#logout-button:hover{
+  transform: scale(1.1);
+  background-color:#2b145749
+}
+#logout-btn{
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+#logout-btn:hover{
+  transform: scale(1.1);
+  background-color:#2b145749;}
+#another-quiz-btn{
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+#another-quiz-btn:hover{
+  transform: scale(1.1);
+background-color: #0f0229;
+}
+#read{
+  width:inherit;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  color:rgb(30, 17, 65);
+  background-color: #ffffff00;
+}
+#read:hover{
+  transform: scale(1.1);
+  background-color: #0f022910;
 }
